--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
             </div>
             <div>
                 <h1>vission</h1>
+                <p>I want to be a skilled web developer and I am new to this subjec.I know not all talents can win, but
+                    hard workers can't lose.</p>
             </div>
         </section>
     </body>
